--- a/lang/de.json
+++ b/lang/de.json
@@ -18,7 +18,7 @@
         "Message": "Nachricht",
         "PresentYourself": "Ihr Name / Ihre E-Mailadresse?",
         "SendMyMessage": "Nachricht senden",
-        "PersonalInformations": "Personal Informations",
+        "PersonalInformations": "Persönliche Informationen",
         "Phone": "Telefon",
         "Comments": "Kommentar",
         "Save": "Speichern",
